Fixed JIDE-OSS maven build: missing apple classes / use multi-release jar (8 / 9+)